# wickerly

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
docs/: ARCHITECTURE.md  CRDT_DESIGN.md  ROADMAP.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  sync.rs
src/components/: CommandPalette.css  CommandPalette.tsx  FolderTree.css  FolderTree.tsx  NoteList.css  NoteList.tsx  Sidebar.css  Sidebar.tsx  TagChipInput.css  TagChipInput.tsx  TagFilter.css  TagFilter.tsx
src/crdt/: clock.ts  index.ts  lww.ts  types.ts
src/crdt/__tests__/: concurrent-conflict.test.ts  lww.test.ts
src/dashboard/: ActivityHeatmap.css  ActivityHeatmap.tsx  Dashboard.css  Dashboard.tsx  index.ts  useDashboardStats.ts
src/editor/: MarkdownEditor.tsx  MarkdownPreview.tsx  NoteEditor.css  NoteEditor.tsx  index.ts  templates.ts  warmLightTheme.ts
src/hooks/: useFolders.ts  useNotes.ts  useTheme.tsx
src/search/: SearchIndex.ts  index.ts  useSearch.ts
src/storage/: DexieStorageAdapter.ts  StorageAdapter.ts  StorageContext.tsx  db.ts  index.ts  types.ts
src/storage/__tests__/: crdt-integration.test.ts
src/styles/: tokens.css
src/sync/: SyncManager.ts  TauriSyncTransport.ts  types.ts  useSyncManager.ts
src/sync/__tests__/: SyncManager.test.ts
