[package]
name = "wickerly"
version = "0.1.0"
description = "Wickerly — local-first note-taking and knowledge base"
authors = ["yahia_hani@outlook.com"]
edition = "2021"

[lib]
name = "wickerly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "sync"] }
axum = "0.7"
mdns-sd = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
